sprint_5/ add get request actuality + doc
