# api/Stat/stat.controller.js
@@ -4,6 +4,7 @@ const   express = require("express"),
 
 router.get("/user/mark/average/:id", getMarkAverage);
 router.get("/offer/lastMonth/:id", offerLastMonth);
+router.get("/actuality", actuality);
 
 module.exports = router;
 
@@ -19,6 +20,15 @@ function getMarkAverage(req, res, next) {
 function offerLastMonth(req, res, next) {
     statService
         .offerLastMonth(req)
+        .then(list => {
+            res.status(list.status).json(list.message);
+        })
+        .catch(err => next(err));
+}
+
+function actuality(req, res, next) {
+    statService
+        .actuality(req)
         .then(list => {
             res.status(list.status).json(list.message);
         })
